2011-01-20  Tony Chang  <tony@chromium.org>

        Reviewed by Ojan Vafai.

        [chromium] fix the paths used for the rebaseline tool
        https://bugs.webkit.org/show_bug.cgi?id=52857

        Some of the bots were renamed so the path to grab the results zip
        file has changed.

        * Scripts/webkitpy/layout_tests/rebaseline_chromium_webkit_tests.py:

2011-01-20  Dirk Pranke  <dpranke@chromium.org>

        Reviewed by Tony Chang.

        Fix bug introduced in r72688 / bug 52768 that broke the
        generation of the output filename links in the results.html
        output. Apparently none of the unit tests actually checked to
        make sure the generated links were correct :(

        https://bugs.webkit.org/show_bug.cgi?id=52854

        * Scripts/webkitpy/layout_tests/layout_package/test_failures.py:
        * Scripts/webkitpy/layout_tests/layout_package/test_failures_unittest.py:

2011-01-20  Alexey Proskuryakov  <ap@apple.com>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=52849
        Make window.print work with WebKit2

        * MiniBrowser/mac/BrowserWindowController.m:
        (-[BrowserWindowController awakeFromNib]):
        * WebKitTestRunner/TestController.cpp:
        (WTR::createOtherPage):
        (WTR::TestController::initialize):
        Added zeroes to WKPageUIClient structures to avoid build failures.

2011-01-20  Dirk Pranke  <dpranke@chromium.org>

        Reviewed by Eric Seidel.

        nrwt: remove fs refs from printing, test_failures, test_expectations, text_diff

        https://bugs.webkit.org/show_bug.cgi?id=52756

        * Scripts/webkitpy/layout_tests/layout_package/printing.py:
        * Scripts/webkitpy/layout_tests/layout_package/printing_unittest.py:
        * Scripts/webkitpy/layout_tests/layout_package/test_expectations.py:
        * Scripts/webkitpy/layout_tests/layout_package/test_expectations_unittest.py: